# speech-emotion-recognition

./: .gitignore  LICENSE.md  README.md  pyproject.toml
configs/: spectral_crnn.yaml  ssl_spectral_moe.yaml
scripts/: visualize_sample.py
src/speechEmotionRecognition/: config_loader.py  main.py
src/speechEmotionRecognition/etl/: augmentations.py  data_extractor.py  data_loader.py  feature_generator.py
src/speechEmotionRecognition/models/: spectral_crnn.py  ssl_spectral_moe.py
src/speechEmotionRecognition/train/: audio_dataset.py  train.py
